crates/rally-plugin/src/snapshots/sidebar_1_agents_20_inbox.snap
---
source: crates/rally-plugin/src/main.rs
expression: body
---
[1;1H[1m Rally [22m                                 [2;1H────────────────────────────────────────[3;1H[1m[38;5;12m◆[22m[39m [1mapi-service[22m                           [4;1H [7m>[27m [38;5;10m●[39m agent-0[2m (cc) p:10[22m                  [5;1H[1m[38;5;12m◆[22m[39m [1mweb-client[22m                            [6;1H[2m  no agents[22m                             [7;1H[1mInbox[22m high:10 medium:10                 [8;1H  20 open · [2mpress i for detail[22m          [9;1H────────────────────────────────────────[10;1H1 agents[38;5;10m 1●[39m                             [11;1H[2m[N]ext [j/k]move [f]ocus [a]ck [s]pawn …[12;1H[22m                                        [13;1H                                        [14;1H                                        [15;1H                                        [16;1H                                        [17;1H                                        [18;1H                                        [19;1H                                        [20;1H                                        [21;1H                                        [22;1H                                        [23;1H                                        [24;1H                                        [25;1H                                        [26;1H                                        [27;1H                                        [28;1H                                        [29;1H                                        [30;1H                                        [31;1H                                        [32;1H                                        [33;1H                                        [34;1H                                        [35;1H                                        [36;1H                                        [37;1H                                        [38;1H                                        [39;1H                                        [40;1H                                        [41;1H                                        [42;1H                                        [43;1H                                        [44;1H                                        [45;1H                                        [46;1H                                        [47;1H                                        [48;1H                                        [49;1H                                        [50;1H                                        [51;1H                                        [52;1H                                        [53;1H                                        [54;1H                                        [55;1H                                        [56;1H                                        [57;1H                                        [58;1H                                        [59;1H                                        [60;1H                                        [61;1H                                        [62;1H                                        [63;1H                                        [64;1H                                        [65;1H                                        [66;1H                                        [67;1H                                        [68;1H                                        [69;1H                                        [70;1H                                        [71;1H                                        [72;1H                                        [73;1H                                        [74;1H                                        [75;1H                                        [76;1H                                        [77;1H                                        [78;1H                                        [79;1H                                        [80;1H                                        [39m[49m[59m[0m
