crates/rally-plugin/src/snapshots/sidebar_50_agents_0_inbox.snap
---
source: crates/rally-plugin/src/main.rs
expression: body
---
[1;1H[1m Rally [22m                                 [2;1H────────────────────────────────────────[3;1H[7m[1m[38;5;12m▼[22m[39m [1mapi-service[27m[22m                           [4;1H ├── [38;5;10m●[39m agent-0[2m (cc)[22m                     [5;1H ├── [38;5;11m⚠[39m agent-2[2m (cc)[22m                     [6;1H ├── [38;5;10m○[39m agent-4[2m (cc)[22m                     [7;1H ├── [38;5;11m◐[39m agent-6[2m (cc)[22m                     [8;1H ├── [38;5;9m◉[39m agent-8[2m (cc)[22m                     [9;1H ├── [38;5;10m●[39m agent-10[2m (cc)[22m                    [10;1H ├── [38;5;11m⚠[39m agent-12[2m (cc)[22m                    [11;1H ├── [38;5;10m○[39m agent-14[2m (cc)[22m                    [12;1H ├── [38;5;11m◐[39m agent-16[2m (cc)[22m                    [13;1H ├── [38;5;9m◉[39m agent-18[2m (cc)[22m                    [14;1H ├── [38;5;10m●[39m agent-20[2m (cc)[22m                    [15;1H ├── [38;5;11m⚠[39m agent-22[2m (cc)[22m                    [16;1H ├── [38;5;10m○[39m agent-24[2m (cc)[22m                    [17;1H ├── [38;5;11m◐[39m agent-26[2m (cc)[22m                    [18;1H ├── [38;5;9m◉[39m agent-28[2m (cc)[22m                    [19;1H ├── [38;5;10m●[39m agent-30[2m (cc)[22m                    [20;1H ├── [38;5;11m⚠[39m agent-32[2m (cc)[22m                    [21;1H ├── [38;5;10m○[39m agent-34[2m (cc)[22m                    [22;1H ├── [38;5;11m◐[39m agent-36[2m (cc)[22m                    [23;1H ├── [38;5;9m◉[39m agent-38[2m (cc)[22m                    [24;1H ├── [38;5;10m●[39m agent-40[2m (cc)[22m                    [25;1H ├── [38;5;11m⚠[39m agent-42[2m (cc)[22m                    [26;1H ├── [38;5;10m○[39m agent-44[2m (cc)[22m                    [27;1H ├── [38;5;11m◐[39m agent-46[2m (cc)[22m                    [28;1H └── [38;5;9m◉[39m agent-48[2m (cc)[22m                    [29;1H[1m[38;5;12m▼[22m[39m [1mweb-client[22m                            [30;1H ├── [38;5;11m◐[39m agent-1[2m (cc)[22m                     [31;1H ├── [38;5;9m◉[39m agent-3[2m (cc)[22m                     [32;1H ├── [38;5;10m●[39m agent-5[2m (cc)[22m                     [33;1H ├── [38;5;11m⚠[39m agent-7[2m (cc)[22m                     [34;1H ├── [38;5;10m○[39m agent-9[2m (cc)[22m                     [35;1H ├── [38;5;11m◐[39m agent-11[2m (cc)[22m                    [36;1H ├── [38;5;9m◉[39m agent-13[2m (cc)[22m                    [37;1H ├── [38;5;10m●[39m agent-15[2m (cc)[22m                    [38;1H ├── [38;5;11m⚠[39m agent-17[2m (cc)[22m                    [39;1H ├── [38;5;10m○[39m agent-19[2m (cc)[22m                    [40;1H ├── [38;5;11m◐[39m agent-21[2m (cc)[22m                    [41;1H ├── [38;5;9m◉[39m agent-23[2m (cc)[22m                    [42;1H ├── [38;5;10m●[39m agent-25[2m (cc)[22m                    [43;1H ├── [38;5;11m⚠[39m agent-27[2m (cc)[22m                    [44;1H ├── [38;5;10m○[39m agent-29[2m (cc)[22m                    [45;1H ├── [38;5;11m◐[39m agent-31[2m (cc)[22m                    [46;1H ├── [38;5;9m◉[39m agent-33[2m (cc)[22m                    [47;1H ├── [38;5;10m●[39m agent-35[2m (cc)[22m                    [48;1H ├── [38;5;11m⚠[39m agent-37[2m (cc)[22m                    [49;1H ├── [38;5;10m○[39m agent-39[2m (cc)[22m                    [50;1H ├── [38;5;11m◐[39m agent-41[2m (cc)[22m                    [51;1H ├── [38;5;9m◉[39m agent-43[2m (cc)[22m                    [52;1H ├── [38;5;10m●[39m agent-45[2m (cc)[22m                    [53;1H ├── [38;5;11m⚠[39m agent-47[2m (cc)[22m                    [54;1H └── [38;5;10m○[39m agent-49[2m (cc)[22m                    [55;1H[1mInbox[22m high:10 medium:10                 [56;1H  20 open · [2mpress i for detail[22m          [57;1H────────────────────────────────────────[58;1H50 agents[38;5;10m 10●[38;5;11m 20⚠[39m                       [59;1H[2m[j/k]move [h/l]collapse [f]ocus [a]ck […[60;1H[22m                                        [61;1H                                        [62;1H                                        [63;1H                                        [64;1H                                        [65;1H                                        [66;1H                                        [67;1H                                        [68;1H                                        [69;1H                                        [70;1H                                        [71;1H                                        [72;1H                                        [73;1H                                        [74;1H                                        [75;1H                                        [76;1H                                        [77;1H                                        [78;1H                                        [79;1H                                        [80;1H                                        [39m[49m[59m[0m
