crates/rally-plugin/src/snapshots/sidebar_50_agents_20_inbox.snap
---
source: crates/rally-plugin/src/main.rs
expression: body
---
[1;1H                                                                        [2;1H[1m[38;2;235;188;186m Rally[22m[39m                                                                  [3;1H                                                                        [4;1H[1m[38;2;196;167;231m[48;2;31;29;46m▾[22m[39m [1m[38;2;224;222;244mapi-service[22m[39m                                                           [5;1H[38;2;110;106;134m[49m ├ [38;2;49;116;143m●[39m [38;2;224;222;244magent-0[38;2;144;140;170m (cc)[39m                                                       [6;1H[38;2;110;106;134m ├ [38;2;246;193;119m◉[39m [38;2;224;222;244magent-2[38;2;144;140;170m (cc)[39m                                                       [7;1H[38;2;110;106;134m ├ [2m[38;2;156;207;216m✓[22m[39m [38;2;224;222;244magent-4[38;2;144;140;170m (cc)[39m                                                       [8;1H[38;2;110;106;134m ├ [38;2;144;140;170m○[39m [38;2;224;222;244magent-6[38;2;144;140;170m (cc)[39m                                                       [9;1H[38;2;110;106;134m ├ [1m[38;2;235;111;146m![22m[39m [38;2;224;222;244magent-8[38;2;144;140;170m (cc)[39m                                                       [10;1H[38;2;110;106;134m ├ [38;2;49;116;143m●[39m [38;2;224;222;244magent-10[38;2;144;140;170m (cc)[39m                                                      [11;1H[38;2;110;106;134m ├ [38;2;246;193;119m◉[39m [38;2;224;222;244magent-12[38;2;144;140;170m (cc)[39m                                                      [12;1H[38;2;110;106;134m ├ [2m[38;2;156;207;216m✓[22m[39m [38;2;224;222;244magent-14[38;2;144;140;170m (cc)[39m                                                      [13;1H[38;2;110;106;134m ├ [38;2;144;140;170m○[39m [38;2;224;222;244magent-16[38;2;144;140;170m (cc)[39m                                                      [14;1H[38;2;110;106;134m ├ [1m[38;2;235;111;146m![22m[39m [38;2;224;222;244magent-18[38;2;144;140;170m (cc)[39m                                                      [15;1H[38;2;110;106;134m ├ [38;2;49;116;143m●[39m [38;2;224;222;244magent-20[38;2;144;140;170m (cc)[39m                                                      [16;1H[38;2;110;106;134m ├ [38;2;246;193;119m◉[39m [38;2;224;222;244magent-22[38;2;144;140;170m (cc)[39m                                                      [17;1H[38;2;110;106;134m ├ [2m[38;2;156;207;216m✓[22m[39m [38;2;224;222;244magent-24[38;2;144;140;170m (cc)[39m                                                      [18;1H[38;2;110;106;134m ├ [38;2;144;140;170m○[39m [38;2;224;222;244magent-26[38;2;144;140;170m (cc)[39m                                                      [19;1H[38;2;110;106;134m ├ [1m[38;2;235;111;146m![22m[39m [38;2;224;222;244magent-28[38;2;144;140;170m (cc)[39m                                                      [20;1H[38;2;110;106;134m ├ [38;2;49;116;143m●[39m [38;2;224;222;244magent-30[38;2;144;140;170m (cc)[39m                                                      [21;1H[38;2;110;106;134m ├ [38;2;246;193;119m◉[39m [38;2;224;222;244magent-32[38;2;144;140;170m (cc)[39m                                                      [22;1H[38;2;110;106;134m ├ [2m[38;2;156;207;216m✓[22m[39m [38;2;224;222;244magent-34[38;2;144;140;170m (cc)[39m                                                      [23;1H[38;2;110;106;134m ├ [38;2;144;140;170m○[39m [38;2;224;222;244magent-36[38;2;144;140;170m (cc)[39m                                                      [24;1H[38;2;110;106;134m ├ [1m[38;2;235;111;146m![22m[39m [38;2;224;222;244magent-38[38;2;144;140;170m (cc)[39m                                                      [25;1H[38;2;110;106;134m ├ [38;2;49;116;143m●[39m [38;2;224;222;244magent-40[38;2;144;140;170m (cc)[39m                                                      [26;1H[38;2;110;106;134m ├ [38;2;246;193;119m◉[39m [38;2;224;222;244magent-42[38;2;144;140;170m (cc)[39m                                                      [27;1H[38;2;110;106;134m ├ [2m[38;2;156;207;216m✓[22m[39m [38;2;224;222;244magent-44[38;2;144;140;170m (cc)[39m                                                      [28;1H[38;2;110;106;134m ├ [38;2;144;140;170m○[39m [38;2;224;222;244magent-46[38;2;144;140;170m (cc)[39m                                                      [29;1H[38;2;110;106;134m └ [1m[38;2;235;111;146m![22m[39m [38;2;224;222;244magent-48[38;2;144;140;170m (cc)[39m                                                      [30;1H[1m[38;2;196;167;231m▾[22m[39m [1m[38;2;224;222;244mweb-client[22m[39m                                                            [31;1H[38;2;110;106;134m ├ [38;2;144;140;170m○[39m [38;2;224;222;244magent-1[38;2;144;140;170m (cc)[39m                                                       [32;1H[38;2;110;106;134m ├ [1m[38;2;235;111;146m![22m[39m [38;2;224;222;244magent-3[38;2;144;140;170m (cc)[39m                                                       [33;1H[38;2;110;106;134m ├ [38;2;49;116;143m●[39m [38;2;224;222;244magent-5[38;2;144;140;170m (cc)[39m                                                       [34;1H[38;2;110;106;134m ├ [38;2;246;193;119m◉[39m [38;2;224;222;244magent-7[38;2;144;140;170m (cc)[39m                                                       [35;1H[38;2;110;106;134m ├ [2m[38;2;156;207;216m✓[22m[39m [38;2;224;222;244magent-9[38;2;144;140;170m (cc)[39m                                                       [36;1H[38;2;110;106;134m ├ [38;2;144;140;170m○[39m [38;2;224;222;244magent-11[38;2;144;140;170m (cc)[39m                                                      [37;1H[38;2;110;106;134m ├ [1m[38;2;235;111;146m![22m[39m [38;2;224;222;244magent-13[38;2;144;140;170m (cc)[39m                                                      [38;1H[38;2;110;106;134m ├ [38;2;49;116;143m●[39m [38;2;224;222;244magent-15[38;2;144;140;170m (cc)[39m                                                      [39;1H[38;2;110;106;134m ├ [38;2;246;193;119m◉[39m [38;2;224;222;244magent-17[38;2;144;140;170m (cc)[39m                                                      [40;1H[38;2;110;106;134m ├ [2m[38;2;156;207;216m✓[22m[39m [38;2;224;222;244magent-19[38;2;144;140;170m (cc)[39m                                                      [41;1H[38;2;110;106;134m ├ [38;2;144;140;170m○[39m [38;2;224;222;244magent-21[38;2;144;140;170m (cc)[39m                                                      [42;1H[38;2;110;106;134m ├ [1m[38;2;235;111;146m![22m[39m [38;2;224;222;244magent-23[38;2;144;140;170m (cc)[39m                                                      [43;1H[38;2;110;106;134m ├ [38;2;49;116;143m●[39m [38;2;224;222;244magent-25[38;2;144;140;170m (cc)[39m                                                      [44;1H[38;2;110;106;134m ├ [38;2;246;193;119m◉[39m [38;2;224;222;244magent-27[38;2;144;140;170m (cc)[39m                                                      [45;1H[38;2;110;106;134m ├ [2m[38;2;156;207;216m✓[22m[39m [38;2;224;222;244magent-29[38;2;144;140;170m (cc)[39m                                                      [46;1H[38;2;110;106;134m ├ [38;2;144;140;170m○[39m [38;2;224;222;244magent-31[38;2;144;140;170m (cc)[39m                                                      [47;1H[38;2;110;106;134m ├ [1m[38;2;235;111;146m![22m[39m [38;2;224;222;244magent-33[38;2;144;140;170m (cc)[39m                                                      [48;1H[38;2;110;106;134m ├ [38;2;49;116;143m●[39m [38;2;224;222;244magent-35[38;2;144;140;170m (cc)[39m                                                      [49;1H[38;2;110;106;134m ├ [38;2;246;193;119m◉[39m [38;2;224;222;244magent-37[38;2;144;140;170m (cc)[39m                                                      [50;1H[38;2;110;106;134m ├ [2m[38;2;156;207;216m✓[22m[39m [38;2;224;222;244magent-39[38;2;144;140;170m (cc)[39m                                                      [51;1H[38;2;110;106;134m ├ [38;2;144;140;170m○[39m [38;2;224;222;244magent-41[38;2;144;140;170m (cc)[39m                                                      [52;1H[38;2;110;106;134m ├ [1m[38;2;235;111;146m![22m[39m [38;2;224;222;244magent-43[38;2;144;140;170m (cc)[39m                                                      [53;1H[38;2;110;106;134m ├ [38;2;49;116;143m●[39m [38;2;224;222;244magent-45[38;2;144;140;170m (cc)[39m                                                      [54;1H[38;2;110;106;134m ├ [38;2;246;193;119m◉[39m [38;2;224;222;244magent-47[38;2;144;140;170m (cc)[39m                                                      [55;1H[38;2;110;106;134m └ [2m[38;2;156;207;216m✓[22m[39m [38;2;224;222;244magent-49[38;2;144;140;170m (cc)[39m                                                      [56;1H[1m[38;2;224;222;244m Inbox[22m[38;2;235;111;146m  ●10[38;2;246;193;119m  ◐10[39m                                                        [57;1H[38;2;144;140;170m   20 open[39m                                                              [58;1H                                                                        [59;1H[38;2;144;140;170m 50 agents[38;2;49;116;143m 10●[38;2;246;193;119m 20◉[39m                                               [38;2;110;106;134m? help [60;1H[39m                                                                        [61;1H                                                                        [62;1H                                                                        [63;1H                                                                        [64;1H                                                                        [65;1H                                                                        [66;1H                                                                        [67;1H                                                                        [68;1H                                                                        [69;1H                                                                        [70;1H                                                                        [71;1H                                                                        [72;1H                                                                        [73;1H                                                                        [74;1H                                                                        [75;1H                                                                        [76;1H                                                                        [77;1H                                                                        [78;1H                                                                        [79;1H                                                                        [80;1H                                                                        [39m[49m[59m[0m
